--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,29 @@
-version: '3.8'
-
 services:
   db:
-    image: mysql:8
+    image: mysql:8.0
     container_name: mysql
     environment:
       MYSQL_DATABASE: expensify
-      MYSQL_USER: root
-      MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
+      MYSQL_ALLOW_EMPTY_PASSWORD: "yes"   # ✅ this is fine
     ports:
       - "3306:3306"
     volumes:
       - mysql-data:/var/lib/mysql
     networks:
       - backend
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
 
   app:
-    build: .
+    build: .  # ← FIXED: now Docker Compose can find your Dockerfile + JAR
     container_name: expensify-app
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     ports:
       - "8080:8080"
     environment:
@@ -28,6 +32,7 @@ services:
       SPRING_DATASOURCE_PASSWORD: ""
     networks:
       - backend
+    restart: unless-stopped
 
 volumes:
   mysql-data:
