--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,23 @@
 spring.application.name=expensify
-spring.datasource.url=jdbc:mysql://localhost:3306/expensify
-spring.datasource.username=root
-spring.datasource.password=
 
+# Use environment variables passed from Docker
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/expensify}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:}
+
+# Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-# Increase the file size limit for file uploads
+# File Upload Limits
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
-spring.main.heap-size=1024m
 
+# Memory Settings (Optional)
+# JVM heap is configured via Docker or JAVA_OPTS in entrypoint, not this
+# Remove this:
+# spring.main.heap-size=1024m
+
+# Server Port
 server.port=8080
