--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:}
 
 # Hibernate
 spring.jpa.hibernate.ddl-auto=update
+spring.datasource.initialization-mode=always
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
