Added features and made changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,14 @@
 spring.application.name=expensify
 
-# Use environment variables passed from Docker
-#spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/expensify}
-#spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root}
-#spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:}
-spring.datasource.url=jdbc:mysql://34.142.187.160:3306/expensify
-spring.datasource.username=root
-spring.datasource.password=YourPasswordHere
+#For Local
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/expensify}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:}
+
+#For Hosted
+#spring.datasource.url=jdbc:mysql://34.142.187.160:3306/expensify
+#spring.datasource.username=root
+#spring.datasource.password=YourPasswordHere
 
 # Hibernate
 spring.jpa.hibernate.ddl-auto=update
