--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,10 +20,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
-# Memory Settings (Optional)
-# JVM heap is configured via Docker or JAVA_OPTS in entrypoint, not this
-# Remove this:
-# spring.main.heap-size=1024m
-
 # Server Port
+# Reverted to 8080 to avoid conflict with XAMPP Apache
 server.port=${PORT:8080}
